# ship_reports_server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  INFO.md  README.md  TODO.md  deploy.sh  docker-compose.yml  pyproject.toml
app/: admin_html.py  config.py  dedup.py  fetch_history.py  main.py  models.py  request_log.py  settings_store.py  stats.py  store.py
app/fetchers/: ndbc.py  osmc.py
tests/: test_api.py  test_dedup.py  test_ndbc_parser.py  test_osmc_parser.py
tools/: gen_info_html.py
