[project]
name = "shipobs-server"
version = "0.1.0"
description = "Ship & buoy observation aggregation server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",  # for FastAPI TestClient
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
