[project]
name = "shipobs-server"
dynamic = ["version"]
description = "Ship & buoy observation aggregation server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",  # for FastAPI TestClient
]

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# fallback used when .git is unavailable (e.g. source tarball)
fallback_version = "0.1.0"
